// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearRefinements() with refinements calls twice ReactDOM.render(<ClearRefinements props />, container) 1`] = `
<RawClearRefinements
  cssClasses={
    Object {
      "button": "ais-ClearRefinements-button",
      "disabledButton": "ais-ClearRefinements-button--disabled",
      "root": "ais-ClearRefinements root cx",
    }
  }
  hasRefinements={true}
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "button": "Clear all",
      },
      "templatesConfig": Object {},
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "button": false,
      },
    }
  }
  url="#all-cleared"
/>
`;

exports[`clearRefinements() with refinements calls twice ReactDOM.render(<ClearRefinements props />, container) 2`] = `
<RawClearRefinements
  cssClasses={
    Object {
      "button": "ais-ClearRefinements-button",
      "disabledButton": "ais-ClearRefinements-button--disabled",
      "root": "ais-ClearRefinements root cx",
    }
  }
  hasRefinements={true}
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "button": "Clear all",
      },
      "templatesConfig": Object {},
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "button": false,
      },
    }
  }
  url="#all-cleared"
/>
`;

exports[`clearRefinements() without refinements calls twice ReactDOM.render(<ClearRefinements props />, container) 1`] = `
<RawClearRefinements
  cssClasses={
    Object {
      "button": "ais-ClearRefinements-button",
      "disabledButton": "ais-ClearRefinements-button--disabled",
      "root": "ais-ClearRefinements root cx",
    }
  }
  hasRefinements={false}
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "button": "Clear all",
      },
      "templatesConfig": Object {},
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "button": false,
      },
    }
  }
  url="#all-cleared"
/>
`;

exports[`clearRefinements() without refinements calls twice ReactDOM.render(<ClearRefinements props />, container) 2`] = `
<RawClearRefinements
  cssClasses={
    Object {
      "button": "ais-ClearRefinements-button",
      "disabledButton": "ais-ClearRefinements-button--disabled",
      "root": "ais-ClearRefinements root cx",
    }
  }
  hasRefinements={false}
  refine={[Function]}
  templateProps={
    Object {
      "templates": Object {
        "button": "Clear all",
      },
      "templatesConfig": Object {},
      "transformData": undefined,
      "useCustomCompileOptions": Object {
        "button": false,
      },
    }
  }
  url="#all-cleared"
/>
`;
